Adiciona índices de performance nos modelos

--- a/supervisor/nitroleads.conf
+++ b/supervisor/nitroleads.conf
@@ -8,7 +8,8 @@
 
 [program:nitroleads]
 # Comando para executar o Gunicorn
-command=/home/nitroleads/apps/nitroleads/venv/bin/gunicorn lead_extraction.wsgi:application --bind 127.0.0.1:8000 --workers 3 --timeout 120
+# Workers: 2n+1 onde n = número de CPUs. Para 2 cores: 5 workers (otimizado para performance)
+command=/home/nitroleads/apps/nitroleads/venv/bin/gunicorn lead_extraction.wsgi:application --bind 127.0.0.1:8000 --workers 5 --timeout 120 --threads 2
 
 # Diretório de trabalho
 directory=/home/nitroleads/apps/nitroleads
