feat: migrar Kiwify para Mercado Pago (Checkout Bricks em modal)
- Remover integração Kiwify (kiwify_service.py, docs, testes)
- Adicionar mercadopago_service.py (preferência, webhook, process_payment)
- Trocar create_checkout para criar preferência MP (pacote fixo e personalizado)
- Implementar Payment Brick em modal na página de créditos
- Adicionar compra personalizada (quantidade de créditos definida pelo usuário)
- Adicionar mercadopago_webhook com validação x-signature
- Atualizar modelo: mp_payment_id, payment_gateway com mercadopago
- Atualizar credit_service e admin para mp_payment_id
- Atualizar middleware CSP e rota pública do webhook
- Criar docs/MERCADOPAGO_SETUP.md e atualizar .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-cat > .env.example << 'EOF'
 # Django
 SECRET_KEY=sua-chave-secreta-aqui
 DEBUG=True
@@ -19,8 +18,12 @@ SUPABASE_URL=https://seu-projeto.supabase.co
 SUPABASE_KEY=sua-supabase-anon-key
 SUPABASE_JWT_SECRET=seu-jwt-secret
 
-# Stripe
+# Mercado Pago (pagamentos)
+MERCADOPAGO_ACCESS_TOKEN=APP_USR-xxxxx
+MERCADOPAGO_PUBLIC_KEY=APP_USR-xxxxx
+MERCADOPAGO_WEBHOOK_SECRET=assinatura-secreta-da-secao-webhooks
+BASE_URL=http://localhost:8000
+
+# Stripe (histórico, opcional)
 STRIPE_SECRET_KEY=sk_test_xxxxx
 STRIPE_WEBHOOK_SECRET=whsec_xxxxx
-BASE_URL=http://localhost:8000
-EOF
